src/objects/FieloAlpha__Rule__c.object
<CustomObject>
    <customHelpPage>FieloAlpha__RuleHelpBackEnd</customHelpPage>
    <description>Rules that determine the points a member earns with a transaction.</description>
    <fields>
        <fullName>FieloAlpha__ActionDescription__c</fullName>
        <label>Action Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Action__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related Action</description>
        <label>Action</label>
        <referenceTo>FieloAlpha__Action__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__BadgeMode__c</fullName>
        <description>This field will indicate if the badge rewarded by the rule will be a fixed one or one depending on a field in the object being processed.</description>
        <label>Badge Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic Badge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ConvertionTypeReward__c</fullName>
        <label>Convertion Type Reward</label>
        <picklist>
            <picklistValues>
                <fullName>Fix Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reward Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ConvertionTypeTransaction__c</fullName>
        <label>Convertion Type Transaction</label>
        <picklist>
            <picklistValues>
                <fullName>Fix Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiplier</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ConvertionValue__c</fullName>
        <label>Convertion Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Description__c</fullName>
        <description>Detail about the content filtered by the rule.</description>
        <inlineHelpText>Enter a description for this rule.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ExpirationMonth__c</fullName>
        <description>The number of months during which the points created by this rule will be valid.</description>
        <inlineHelpText>Amount of months since creation that the points created by the rule will remain vaild.</inlineHelpText>
        <label>Months until Expiration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__FieldNameBadge__c</fullName>
        <description>This field will contain the API name of the field that is a lookup for a Badge in the processed object if the mode is &quot;Badge Field&quot;</description>
        <label>Field Name Badge</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__FieldNameReward__c</fullName>
        <label>Field Name Reward</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__FieldNameTransaction__c</fullName>
        <label>Field Name Transaction</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__InstantBadge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will contain the Badge that will be rewarded by the rule if it&apos;s a fixed value for the instant badge.</description>
        <label>Instant Badge</label>
        <referenceTo>FieloAlpha__Badge__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__InstantReward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instant Reward</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloAlpha__Reward__c.FieloAlpha__isInstantReward__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloAlpha__Reward__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If rule is active, it can be selected for its use</description>
        <inlineHelpText>Check this option in order to activate this rule.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__LogicalExpression__c</fullName>
        <description>Field where a a boolean expression will be stored (with numbers representing each rule criteria)</description>
        <label>Logical Expression</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this rule belongs.</description>
        <inlineHelpText>Select the program to which this rule belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloAlpha__Program__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__RelatedList__c</fullName>
        <inlineHelpText>If you select &quot;--None--&quot;, the record that will be processed will be the master. If not, all the children of the selected related list will be processed.</inlineHelpText>
        <label>Related List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__StockControl__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make that a transaction is not processed if its reward is out of stock. If left unchecked, the transaction will be processed although the reward can not be delivered.</description>
        <inlineHelpText>Check this option if you want that a transaction is not processed when its reward is out of stock.</inlineHelpText>
        <label>Stock Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__TargetMember__c</fullName>
        <label>Target Member</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Type__c</fullName>
        <description>The type of this rule, which decides when the rule is applied.</description>
        <inlineHelpText>Here you choose when to use the given rule. Best Option: Among applicable rules, the best option will be chosen. No Competition: This rule will always be applied.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Best Option</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Competition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>FieloAlpha__All_Rules</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Description__c</columns>
        <columns>FieloAlpha__IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Rules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <recordTypes>
        <fullName>FieloAlpha__Standard_Rule</fullName>
        <active>true</active>
        <label>Standard Rule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloAlpha__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloAlpha__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Rule_Name_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name must be completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Validate_points_value</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( ISPICKVAL(FieloAlpha__ConvertionTypeTransaction__c,&apos;Fix Value&apos;), ISPICKVAL(FieloAlpha__ConvertionTypeTransaction__c,&apos;Factor&apos;), ISPICKVAL(FieloAlpha__ConvertionTypeTransaction__c,&apos;Multiplier&apos;) ), OR(FieloAlpha__ConvertionValue__c == 0, ISNULL(FieloAlpha__ConvertionValue__c), ISBLANK(FieloAlpha__ConvertionValue__c)) )</errorConditionFormula>
        <errorMessage>The quantity of points cannot be empty or be 0</errorMessage>
    </validationRules>
</CustomObject>